src/objects/PegaCredentials__c/PegaCredentials__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This CS stores the username and password to access Pega Service</description>
    <label>Pega Credentials</label>
</CustomObject>