src/objects/PegaCredentials__c/fields/Client_Credentials__c.field-meta.xml
<CustomField>
    <fullName>Client_Credentials__c</fullName>
    <label>Client Credentials</label>
    <length>255</length>
    <type>Text</type>
</CustomField>